# taskbar-todolist-desktop

./: .gitignore  Cargo.toml  DOCS.md  Makefile  NOTICE.md  README.md  index.html  package.json  pnpm-lock.yaml  run_dev.sh  run_prod.sh  run_watch.sh
.github/workflows/: ci.yml
_bmad/: config.toml
_bmad-output/implementation-artifacts/: 1-1-scaffold-rust-native-app-and-linux-validation-baseline.md  1-1-scaffold-tauri-app-and-linux-validation-baseline.md  1-2-tray-icon-opens-compact-panel-without-quitting-app.md  1-3-app-tray-controls-and-explicit-quit.md  2-1-compact-native-tray-panel-ui.md  2-2-add-task-from-top-input-with-enter.md  2-3-active-task-list-rendering.md  2-4-delete-task-from-row-trash-action.md  3-1-sqlx-sqlite-task-schema-and-migrations.md  3-2-rust-task-repository-and-tauri-commands.md  3-3-persist-tray-tasks-across-app-restart.md  3-4-soft-delete-and-local-data-safety.md  4-1-open-full-edit-ui-from-tray.md  4-2-select-and-edit-task-text.md  4-3-change-task-status-in-full-ui.md  5-1-mobile-local-task-companion.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-05-19.md  prd.md  product-brief-taskbar-todolist.md  ux-design-directions.html  ux-design-specification.md  (+1 more)
docs/: mobile-technology-note.md  product.md
migrations/: 0001_create_tasks.sql
packaging/: AppRun  taskbar-todolist-desktop.appdata.xml  taskbar-todolist-desktop.desktop.in
src/: README.md  main.rs  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_create_tasks.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: errors.rs  mod.rs  state.rs  tray.rs  windows.rs
src-tauri/src/tasks/: commands.rs  dto.rs  migrations.rs  mod.rs  model.rs  repository.rs
(+29 files in other folders)
